# browserstate-nova-adapter

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py
browserstate_nova_adapter/: __init__.py
examples/: advanced_usage.py  amazon_shopping.py  provider_configurations.py  session_configs.py  simple_usage.py
tests/: test_adapter.py  test_providers.py
